# chainweb-data

./: .gitignore  ChangeLog.md  README.md  README.org  cabal.project  cabal.project.freeze  chainweb-data.cabal  default.nix  docker-legacy.nix  docker.nix  flake-inputs.nix  flake.nix  hie.yaml  invariants.md  migrations.md  node-config-for-chainweb-data.yaml  shell.nix  spec.json  stack.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  nix.yml
bench/: Bench.hs
data/: token_payments.csv
exec/: Main.hs
exec/Chainweb/: Allocations.hs  Backfill.hs  BackfillTransfers.hs  Coins.hs  Database.hs  Env.hs  FillEvents.hs  FillTransfers.hs  Gaps.hs  Listen.hs  Lookups.hs  New.hs  RichList.hs  RichListScript.hs  Server.hs  Single.hs  Types.hs  Update.hs  Worker.hs
exec/ChainwebApi/Types/: Base64Url.hs  BlockHeader.hs  BytesLE.hs  Common.hs  Hash.hs  MinerData.hs
exec/Common/: Types.hs  Utils.hs
haskell-src/: TAGS  chainweb-data.cabal  stack.yaml
haskell-src/bench/: Bench.hs
haskell-src/data/: token_payments.csv
haskell-src/db-schema/: init.sql
haskell-src/db-schema/migrations/: 2.1.1.2_blocks_height_chainid_idx.sql  2.1.1_transactions_pactid_index.sql  2.1.2_transactions_pactid_index.sql  2.1.3_transactions_pactid_index.sql  2.2.0.1_swap_signers_pkey.sql
haskell-src/exec/: Main.hs
haskell-src/exec/Chainweb/: Allocations.hs  Backfill.hs  BackfillTransfers.hs  Coins.hs  FillEvents.hs  Gaps.hs  Listen.hs  Lookups.hs  RichList.hs  Server.hs  Single.hs  Worker.hs
haskell-src/lib/ChainwebData/: Backfill.hs  Env.hs  Genesis.hs  Spec.hs  Types.hs
haskell-src/lib/ChainwebDb/: Database.hs  Migration.hs  Queries.hs
haskell-src/lib/ChainwebDb/Types/: Block.hs  Common.hs  DbHash.hs  Event.hs  Signer.hs  Transaction.hs  Transfer.hs  Verifier.hs
haskell-src/test/: Main.hs  command-text-with-verifier.txt  test-verifier.txt
haskell-src/test/Chainweb/Data/Test/: Backfill.hs  Parser.hs  Verifier.hs
lib/ChainwebData/: Api.hs  Backfill.hs  Env.hs  EventDetail.hs  Genesis.hs  Pagination.hs  Spec.hs  TxDetail.hs  TxSummary.hs  Types.hs  Util.hs
lib/ChainwebDb/: BoundedScan.hs  Database.hs  Queries.hs
lib/ChainwebDb/Types/: Block.hs  Common.hs  DbHash.hs  Event.hs  Header.hs  Miner.hs  MinerKey.hs  PubKey.hs  Signer.hs  Transaction.hs  Transfer.hs  TxDetail.hs
nix/: nixos-module.nix
scripts/: richlist.sh
src/ChainwebDb/Types/: Block.hs  DbHash.hs  Miner.hs  MinerKey.hs  PubKey.hs  Transaction.hs
test/: Suite.hs
test/Chainweb/Data/Test/: Backfill.hs  Parser.hs
