cabal-version:      2.2
name:               chainweb-data
version:            1.1.0
description:        Data ingestion for Chainweb.
homepage:           https://github.com/kadena-io/chainweb-data
author:             Colin Woodbury
maintainer:         colin@kadena.io
copyright:          2020 Kadena LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.org
  ChangeLog.md

common commons
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

  build-depends:
    , aeson             >=0.11.3.0 && <1.5
    , base              >=4.7      && <5
    , base-prelude      ^>=1.3
    , base16-bytestring ^>=0.1
    , beam-core         ^>=0.8
    , beam-migrate      ^>=0.4
    , beam-postgres     ^>=0.4
    , bytestring        ^>=0.10
    , chainweb-api      ^>=1.0
    , containers        ^>=0.6
    , microlens         ^>=0.4
    , microlens-aeson   ^>=2.3
    , scientific        ^>=0.3
    , streaming-events  ^>=1.0.1
    , text              ^>=1.2
    , time              ^>=1.8

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules:
    ChainwebData.Types
    ChainwebDb.Types.Block
    ChainwebDb.Types.DbHash
    ChainwebDb.Types.MinerKey
    ChainwebDb.Types.Transaction

executable chainweb-data
  import:         commons
  main-is:        Main.hs
  hs-source-dirs: exec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base16-bytestring
    , base64-bytestring     ^>=1.0
    , bytestring
    , cereal                ^>=0.5
    , chainweb-data
    , errors                ^>=2.3
    , http-client           ^>=0.6
    , http-client-tls       ^>=0.3
    , microlens
    , microlens-aeson
    , optparse-applicative  ^>=0.14
    , resource-pool         ^>=0.2
    , retry                 ^>=0.8
    , scheduler             ^>=1.4
    , streaming             ^>=0.2
    , streaming-events
    , strict-tuple          ^>=0.1
    , witherable-class      ^>=0

  other-modules:
    Chainweb.Backfill
    Chainweb.Database
    Chainweb.Env
    Chainweb.Gaps
    Chainweb.Listen
    Chainweb.Lookups
    Chainweb.Single
    Chainweb.Worker

test-suite testsuite
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Suite.hs

    build-depends:
        -- internal
          chainweb-data

        -- external
        , aeson
        , base
        , bytestring
        , chainweb-api
        , microlens
        , neat-interpolation >= 0.3.2 && < 0.4
        , tasty       ^>= 1.2
        , tasty-hunit ^>= 0.10
        , text
