cabal-version:   2.2
name:            chainweb-data
version:         1.3.0
description:     Data ingestion for Chainweb.
homepage:        https://github.com/kadena-io/chainweb-data
author:          Colin Woodbury
maintainer:
  Douglas Beardsley <doug@kadena.io>, Emily Pillmore <emily@kadena.io>

copyright:       2020 Kadena LLC
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple
extra-doc-files:
  README.org
  ChangeLog.md

common commons
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

  build-depends:
    , aeson              >=0.11.3.0 && <1.5
    , base               >=4.7      && <5
    , base-prelude       ^>=1.3
    , base16-bytestring  ^>=0.1
    , beam-core          >=0.8 && <0.10
    , beam-migrate       >=0.4 && <0.6
    , beam-postgres      >=0.5 && <0.6
    , bytestring         ^>=0.10
    , chainweb-api
    , containers         ^>=0.6
    , data-default
    , deepseq
    , directory
    , exceptions
    , filepath
    , lens
    , lens-aeson
    , scientific         ^>=0.3
    , servant
    , streaming-events   ^>=1.0.1
    , text               ^>=1.2
    , time               >=1.8      && <1.11
    , unordered-containers

flag ghc-flags
  description: Enable ghc dumps of .ghc.flags and .ghc.version for tooling
  default:     False
  manual:      True

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules:
    ChainwebData.Backfill
    ChainwebData.Genesis
    ChainwebData.Types
    ChainwebDb.Types.Block
    ChainwebDb.Types.DbHash
    ChainwebDb.Types.MinerKey
    ChainwebDb.Types.Transaction
    ChainwebDb.Types.Event

  if flag(ghc-flags)
    build-tool-depends: hsinspect:hsinspect -any
    ghc-options:        -fplugin GhcFlags.Plugin
    build-depends:      ghcflags

executable chainweb-data
  import:         commons
  main-is:        Main.hs
  hs-source-dirs: exec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , async                    ^>=2.2
    , base16-bytestring
    , base64-bytestring        ^>=1.0
    , bytestring
    , cassava                  ^>=0.5
    , cereal                   ^>=0.5
    , chainweb-data
    , connection
    , containers               ^>=0.6
    , Decimal
    , errors                   ^>=2.3
    , gargoyle
    , gargoyle-postgresql
    , http-client              ^>=0.6
    , http-client-tls          ^>=0.3
    , mtl
    , optparse-applicative     >=0.14 && <0.17
    , pact
    , postgresql-simple
    , process                  ^>=1.6
    , resource-pool            ^>=0.2
    , retry                    ^>=0.8
    , scheduler                ^>=1.4
    , servant-client
    , servant-client-core
    , servant-server
    , streaming                ^>=0.2
    , streaming-events
    , strict-tuple             ^>=0.1
    , vector
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra
    , wai-middleware-throttle
    , warp
    , warp-tls
    , witherable-class         ^>=0
    , yet-another-logger

  -- , gargoyle-postgresql-nix
  other-modules:
    Chainweb.Backfill
    Chainweb.Coins
    Chainweb.Database
    Chainweb.Env
    Chainweb.Gaps
    Chainweb.Listen
    Chainweb.Lookups
    Chainweb.RichList
    Chainweb.Server
    Chainweb.Single
    Chainweb.Worker

test-suite testsuite
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Chainweb.Data.Test.Backfill
    Chainweb.Data.Test.Parser

  build-depends:
    , aeson
    , base
    , bytestring
    , chainweb-api
    , chainweb-data
    , containers          ^>=0.6
    , neat-interpolation  >=0.5 && < 0.6
    , tasty               ^>=1.2
    , tasty-hunit         ^>=0.10
    , text

-- internal
-- external
