cabal-version:   2.2
name:            chainweb-data
version:         2.4.0
description:     Data ingestion for Chainweb.
homepage:        https://github.com/kadena-io/chainweb-data
author:          Colin Woodbury
maintainer:
  Douglas Beardsley <doug@kadena.io>, Emily Pillmore <emily@kadena.io>, Enis Bayramoğlu <enis@kadena.io>, Emmanuel Denloye-Ito <emmanuel@kadena.io>

copyright:       2020 Kadena LLC
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple

common commons
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -fmax-relevant-binds=0

  build-depends:
    , aeson              >= 1.4.3
    , base               >=4.7      && <5
    , base-prelude
    , base16-bytestring  >=0.1
    , beam-core          >=0.8
    , beam-migrate       >=0.4
    , beam-postgres      >=0.5
    , bytestring         >=0.10
    , chainweb-api
    , containers         >=0.6
    , data-default
    , deepseq
    , directory
    , exceptions
    , filepath
    , hashable
    , lens
    , lens-aeson
    , postgresql-simple
    , resource-pool      >= 0.4
    , safe
    , scientific         >=0.3
    , servant
    , streaming-events   >=1.0.1
    , text               >=1.2
    , time               >=1.8
    , unordered-containers

flag ghc-flags
  description: Enable ghc dumps of .ghc.flags and .ghc.version for tooling
  default:     False
  manual:      True

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules:
    ChainwebData.Backfill
    ChainwebData.Genesis
    ChainwebData.Types
    ChainwebData.Env
    ChainwebData.Spec
    ChainwebDb.BoundedScan
    ChainwebDb.Database
    ChainwebDb.Migration
    ChainwebDb.Queries
    ChainwebDb.Types.Block
    ChainwebDb.Types.Common
    ChainwebDb.Types.DbHash
    ChainwebDb.Types.Event
    ChainwebDb.Types.MinerKey
    ChainwebDb.Types.Signer
    ChainwebDb.Types.Transaction
    ChainwebDb.Types.Transfer
  build-depends:
    base64-bytestring        >=1.0
    , cryptohash
    , Decimal
    , http-client              >=0.6
    , http-client-tls          >=0.3
    , http-types
    , openapi3
    , optparse-applicative     >=0.14 && <0.17
    , postgresql-simple-migration
    , servant-client
    , servant-openapi3
    , vector
    , yet-another-logger

  if flag(ghc-flags)
    build-tool-depends: hsinspect:hsinspect -any
    ghc-options:        -fplugin GhcFlags.Plugin
    build-depends:      ghcflags

flag threaded
  description: Build chainweb-data with threading support
  default: True

executable chainweb-data
  import:         commons
  main-is:        Main.hs
  hs-source-dirs: exec data db-schema
  if flag(threaded)
      ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , async                    >=2.2
    , base16-bytestring
    , base64-bytestring        >=1.0
    , bytestring
    , cassava                  >=0.5.1
    , cereal                   >=0.5
    , chainweb-data
    , connection
    , containers               >=0.6
    , Decimal
    , direct-sqlite
    , errors                   >=2.3
    , file-embed
    , http-client              >=0.6
    , http-client-tls          >=0.3
    , http-types
    , lens-aeson
    , managed
    , mtl
    , optparse-applicative     >=0.14
    , pact                     >=4.3.1
    , postgresql-simple
    , postgresql-simple-migration
    , process                  >=1.6
    , resource-pool            >= 0.4
    , retry                    >=0.8
    , scheduler                 >=1.4
    , servant-client
    , servant-client-core
    , servant-server
    , servant-swagger-ui
    , stm
    , stm-chans
    , streaming                >=0.2
    , streaming-events
    , strict-tuple             >=0.1
    , string-conv
    , vector
    , wai
    , wai-app-static
    , wai-cors
    , wai-extra
    , wai-middleware-throttle
    , warp
    , warp-tls
    , witherable
    , yet-another-logger

  other-modules:
    Chainweb.Backfill
    Chainweb.BackfillTransfers
    Chainweb.Coins
    Chainweb.FillEvents
    Chainweb.Gaps
    Chainweb.Listen
    Chainweb.Lookups
    Chainweb.RichList
    Chainweb.Server
    Chainweb.Single
    Chainweb.Worker

test-suite testsuite
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Chainweb.Data.Test.Backfill
    Chainweb.Data.Test.Parser

  build-depends:
    , aeson
    , base
    , bytestring
    , chainweb-api
    , chainweb-data
    , containers          >=0.6
    , neat-interpolation  >=0.5
    , tasty               >=1.2
    , tasty-hunit         >=0.10
    , text

benchmark bench
  import: commons
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: bench
  main-is: Bench.hs
  type: exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , beam-core          >=0.8
    , beam-migrate       >=0.4 && <0.6
    , beam-postgres      >=0.5 && <0.6
    , bytestring
    , chainweb-api
    , chainweb-data
    , connection
    , containers          >=0.6
    , deepseq
    , exceptions
    , http-client              >=0.6
    , optparse-applicative     >=0.14
    , postgresql-simple
    , resource-pool      >= 0.4
    , string-conv
    , text
    , time               >=1.8
    , unordered-containers
    , vector

-- internal
-- external
